--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ng6-lib-app",
+  "lib-name": "ng6-lib",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +8,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build_lib": "ng build --prod ng6-lib",
+    "npm_pack": "cd dist/ng6-lib && npm pack",
+    "package": "npm run build_lib && npm run npm_pack && node build-script.js"
   },
   "private": true,
   "dependencies": {
@@ -36,6 +40,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "concat": "^1.0.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^2.0.2",
